k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: sik2dev/p-14650-2:api-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: backend
spec:
  selector:
    app: api-gateway
  ports:
    - port: 9000
      targetPort: 9000
